<resources>
    <string name="app_name">Framecad</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="logout_success">Logout successful, please login again.</string>
    <string name="logout_fail">Logout failed, go back to login page anyway.</string>
    <string name="login_expiry">Login expires, please login again.</string>
    <string name="js_error">Stack renderer initialisation error, please try again later.</string>


    <!-- Qr code page -->
    <string name="qr_page_tile">Scan QR Code</string>
    <string name="qr_page_bottom_tap">Scan QR Code</string>
    <string name="pref_key_camerax_target_resolution" translatable="false">ctas</string>
    <string name="warn_camera_disable">Please open the camera permission.</string>



    <!-- Project page -->
    <string name="projects_page_tile">Projects</string>
    <string name="projects_bottom_tap">Projects</string>
    <string name="top_bar_logout">Logout</string>
    <string name="project_id">project_id</string>


    <!-- Project detail page -->
    <string name="project_detail_page_tile">Project Detail</string>
    <string name="project_detail_page_back">Back</string>


    <!-- View detail page -->
    <string name="view_detail_page_tile">View Detail</string>
    <string name="view_detail_page_back">Back</string>
    <string name="view_detail_page_bottom_button_stack">Show Stack Drawing</string>
    <string name="view_detail_page_bottom_button_panel">Show Panel Drawing</string>
    <string name="view_detail_page_item">scan_item</string>


    <!-- QR code view option page -->
    <string name="qr_view_detail">View Details</string>
    <string name="qr_update_status">Update Status</string>


    <!-- View Update page -->
    <string name="view_update_page_title">View Status</string>
    <string name="view_update_current_status_title">Current Status</string>
    <string name="view_update_status_title">Update Status</string>
    <string name="view_update_switch_title_stack">Have all panels been loaded to the stack?</string>
    <string name="view_update_switch_title_panel">Has the stack been physically broken out into its component panels?</string>
    <string name="view_update_note_title">Note</string>
    <string name="view_update_note_hint">Add Note…</string>
    <string name="view_update_page_back">Back</string>
    <string name="view_update_page_bottom_button">Submit</string>
    <string name="view_update_page_switch_no">No</string>
    <string name="view_update_page_switch_yes">Yes</string>
    <string name="view_update_page_update_succeed">Status updated succeed.</string>
    <string name="view_update_page_update_failed">Status updated failed, please try again.</string>
    <string name="view_update_page_switch_failed">Switch can not be changed under current status.</string>


    <!-- Loading -->
    <string name="loading">Loading</string>
    <string name="loading_error_msg">Data loading error, filling unsupported data type or check network.</string>



    <string-array name="status_array" >
        <item>Awaiting Rework</item>
        <item>Assembled</item>
        <item>In Inventory</item>
        <item>In Transit</item>
        <item>On Site</item>
        <item>Installed</item>
    </string-array>


    <!-- Login page -->
    <string name="login_button_text">Log In</string>
    <string name="forgot_button_text">Submit</string>
    <string name="forgot_password_text">Forgot Password</string>
    <string name="forgot_password_describe">Please enter your email address below. An email will be sent with a link for you to reset your password.</string>
    <string name="forgot_password_remember"><u>Remembered your password? Log in</u></string>
    <string name="prompt_forgot">Email Address</string>
    <string name="pref_key_access_token" translatable="false">access_token</string>
    <string name="pref_key_user_name" translatable="false">user_name</string>
    <string name="pref_key_account_id" translatable="false">account_id</string>
    <string name="kick_out_text">Login info became invalid, please login again.</string>
    <string name="login_fail">Username or password is invalid, please try again.</string>

    <!-- Forgot password page -->
    <string name="forgot_success">Please check your email to reset your password.</string>
    <string name="forgot_fail">Failed to send reset link, please try again.</string>
    <string name="forgot_invalid_email">Please enter a valid email.</string>

    <!-- Location -->
    <string name="gps_enable">GPS enable</string>
    <string name="please_turn_on_gps">Please turn on GPS</string>
    <string name="ok">OK</string>
    <string name="warn_location_disable">Please turn on the permission to get your current location.</string>


    <!-- Network -->
    <string name="error_msg_no_internet">No Internet Connection</string>
    <string name="server_error_msg">Something went wrong, please try again later</string>

    <!-- Svg drawing page -->
    <string name="svg_drawing_page_item">svg_item</string>
    <string name="svg_drawing_unsupported_msg">Sorry, your phone model doesn\'t support 3D drawing.</string>

</resources>