<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="com.framecad.plum.viewmodel.login.LoginViewModel" />

        <variable
            name="submitClickListener"
            type="android.view.View.OnClickListener" />

        <variable
            name="backClickListener"
            type="android.view.View.OnClickListener" />


    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <include
            android:id="@+id/app_bar_layout"
            layout="@layout/common_app_bar_layout"
            app:backClickListener="@{backClickListener}"
            app:title=""/>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/app_bar_layout"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="50dp"
            android:paddingStart="35dp"
            android:paddingEnd="35dp">

            <TextView
                android:id="@+id/title"
                android:layout_width="188dp"
                android:layout_height="33dp"
                android:text="@string/forgot_password_text"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:gravity="center"
                android:layout_gravity="center_horizontal"

                />
            <TextView
                android:id="@+id/username_layout"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:orientation="horizontal"
                android:layout_marginBottom="29dp"
                android:layout_marginTop="29dp"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:text="@string/forgot_password_describe"
                android:gravity="center"
                />



            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/password_layout"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:orientation="horizontal"
                android:background="@drawable/bg_status_spinner"
                android:layout_marginBottom="17dp">



                <EditText
                    android:id="@+id/email"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="@dimen/login_page_left_margin"
                    android:hint="@string/prompt_forgot"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionDone"
                    android:selectAllOnFocus="true"
                    android:textSize="15sp"
                    android:background="@android:color/transparent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintRight_toRightOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>



            <TextView
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:text="@string/forgot_button_text"
                android:textStyle="bold"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:background="@drawable/ic_view_detail_button_background"
                android:onClick="@{submitClickListener}"
                android:layout_marginBottom="34dp"
                />

            <TextView
                android:id="@+id/forgot"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/forgot_password_remember"
                android:gravity="top|center_horizontal"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:onClick="@{backClickListener}"
                />





        </LinearLayout>







    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>
