<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="vm"
            type="com.framecad.plum.viewmodel.login.LoginViewModel" />

        <variable
            name="loginClickListener"
            type="android.view.View.OnClickListener" />

        <variable
            name="forgotClickListener"
            type="android.view.View.OnClickListener" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="35dp"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingEnd="35dp"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context=".ui.login.LoginActivity">



        <View
            android:id="@+id/icon"
            android:layout_width="188dp"
            android:layout_height="33dp"
            android:background="@mipmap/ic_login"
            android:layout_marginBottom="43dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/username_layout"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            />
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/username_layout"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:orientation="horizontal"
            android:layout_marginBottom="15dp"
            app:layout_constraintTop_toBottomOf="@+id/icon"
            app:layout_constraintBottom_toTopOf="@+id/password_layout"
            android:background="@drawable/bg_status_spinner">
            <View
                android:id="@+id/username_icon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:background="@drawable/ic_login_username"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/login_page_left_margin"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>


            <EditText
                android:id="@+id/username"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="@dimen/login_page_left_margin"
                android:background="@android:color/transparent"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:selectAllOnFocus="true"
                app:layout_constraintLeft_toRightOf="@+id/username_icon"
                app:layout_constraintBottom_toBottomOf="@+id/username_icon"
                app:layout_constraintRight_toRightOf="parent"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/password_layout"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/username_layout"
            android:background="@drawable/bg_status_spinner"
            app:layout_constraintBottom_toTopOf="@+id/login"
            android:layout_marginBottom="24dp">
            <View
                android:id="@+id/password_icon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:background="@drawable/ic_login_password"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/login_page_left_margin"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>


            <EditText
                android:id="@+id/password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="@dimen/login_page_left_margin"
                android:hint="@string/prompt_password"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:selectAllOnFocus="true"
                android:textSize="15sp"
                android:background="@android:color/transparent"
                app:layout_constraintLeft_toRightOf="@+id/password_icon"
                app:layout_constraintBottom_toBottomOf="@+id/password_icon"
                app:layout_constraintRight_toRightOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>



        <TextView
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:text="@string/login_button_text"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:background="@drawable/ic_view_detail_button_background"
            android:onClick="@{loginClickListener}"
            android:layout_marginBottom="34dp"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/password_layout"
            app:layout_constraintBottom_toTopOf="@+id/forgot"
            />

        <TextView
            android:id="@+id/forgot"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:text="@string/forgot_password_text"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:onClick="@{forgotClickListener}"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login"
            app:layout_constraintBottom_toBottomOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>
