<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>

        <import type="com.framecad.plum.data.response.PanelStatusResponse"/>
        <import type="com.framecad.plum.data.response.StackStatusResponse"/>
        <import type="com.framecad.plum.R"/>
        <import type="com.framecad.plum.data.model.StatusPage"/>

        <variable
            name="backClickListener"
            type="android.view.View.OnClickListener" />

        <variable
            name="submitClickListener"
            type="android.view.View.OnClickListener" />

        <variable
            name="checkedChangeListener"
            type="android.widget.CompoundButton.OnCheckedChangeListener" />

        <variable
            name="stateSelector"
            type="com.framecad.plum.adapters.ProjectStatus" />
        <variable
            name="vm"
            type="com.framecad.plum.viewmodel.viewupdate.ViewUpdateViewModel" />

        <variable
            name="scanItem"
            type="com.framecad.plum.data.model.ScanItem" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false">


        <include
            android:id="@+id/app_bar_layout"
            layout="@layout/common_app_bar_layout"
            app:backClickListener="@{backClickListener}"
            app:title="@{scanItem.name}"/>


        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/swipe_refresh_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@+id/app_bar_layout"
            app:layout_constraintBottom_toTopOf="@+id/button_layout">
            <ScrollView
                android:id="@+id/scroll_view"
                android:layout_width="match_parent"
                android:layout_height="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:animateLayoutChanges="true">
                    <TextView
                        android:id="@+id/current_status_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/view_update_current_status_title"
                        android:textStyle="bold"
                        android:gravity="start"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:onClick="@{submitClickListener}"
                        android:layout_gravity="start"
                        android:layout_marginStart="@dimen/view_update_item_margin_left_top"
                        android:layout_marginTop="@dimen/view_update_item_margin_left_top"
                        />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="12dp">
                        <View
                            android:id="@+id/status_icon"
                            android:layout_width="12dp"
                            android:layout_height="12dp"
                            android:layout_gravity="center_vertical"
                            android:layout_marginStart="@dimen/view_update_item_margin_left_top"
                            app:backgroundResource="@{stateSelector.chooseIcon(vm.statusPageItemObject.statusText)}"
                            tools:background="@drawable/ic_projects_status_icon_inventory"
                            />

                        <TextView
                            android:id="@+id/current_status"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@{vm.statusPageItemObject.statusText}"
                            android:gravity="center"
                            android:textColor="@color/black"
                            android:textSize="15sp"
                            android:layout_gravity="center"
                            android:layout_marginStart="7dp"
                            />
                    </LinearLayout>




                    <TextView
                        android:id="@+id/update_status_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/view_update_status_title"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:onClick="@{submitClickListener}"
                        android:layout_gravity="start"
                        android:layout_marginStart="@dimen/view_update_item_margin_left_top"
                        android:layout_marginTop="30dp"
                        />

                    <Spinner
                        android:id="@+id/spinner"
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:layout_marginTop="12dp"
                        android:layout_marginStart="@dimen/view_update_item_margin_left_top"
                        android:layout_marginEnd="@dimen/view_update_item_margin_left_top"
                        style="@style/SpinnerTheme"
                        />


                    <TextView
                        android:id="@+id/switch_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{vm.statusPageItemObject.type == StatusPage.StatusPageType.STACK? R.string.view_update_switch_title_stack: R.string.view_update_switch_title_panel}"
                        android:textStyle="bold"
                        android:gravity="start"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:onClick="@{submitClickListener}"
                        android:layout_gravity="start"
                        android:layout_marginStart="@dimen/view_update_item_margin_left_top"
                        android:layout_marginTop="36dp"
                        android:visibility="gone"
                        tools:text="@string/view_update_switch_title_panel"
                        />

                    <LinearLayout
                        android:id="@+id/switch_layout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginStart="@dimen/view_update_item_margin_left_top"
                        android:visibility="invisible"
                        app:layout_constraintTop_toBottomOf="@+id/switch_title"
                        app:layout_constraintLeft_toLeftOf="@id/switch_title"
                        >
                        <TextView
                            android:id="@+id/switch_text_no"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/view_update_page_switch_no"
                            android:textSize="15sp"
                            android:textColor="@{switcher.checked?@color/projects_progress_gray:@color/black}"
                            android:textStyle="bold"
                            android:gravity="center"
                            android:layout_gravity="center"
                            />
                        <androidx.appcompat.widget.SwitchCompat
                            android:id="@+id/switcher"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:scaleX="1.2"
                            android:scaleY="1.2"
                            android:layout_marginStart="5dp"
                            android:layout_marginEnd="5dp"
                            android:clickable="@{vm.switchChangeable}"
                            android:onCheckedChanged="@{checkedChangeListener}"
                            app:useMaterialThemeColors="false"
                            />

                        <TextView
                            android:id="@+id/switch_text_yes"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/view_update_page_switch_yes"
                            android:textSize="15sp"
                            android:textColor="@{switcher.checked?@color/black : @color/projects_progress_gray}"
                            android:textStyle="bold"
                            android:gravity="center"
                            android:layout_gravity="center"
                            />
                    </LinearLayout>




                    <TextView
                        android:id="@+id/note_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/view_update_note_title"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:onClick="@{submitClickListener}"
                        android:layout_gravity="start"
                        android:layout_marginStart="@dimen/view_update_item_margin_left_top"
                        android:layout_marginTop="40dp"
                        />

                    <androidx.coordinatorlayout.widget.CoordinatorLayout
                        android:id="@+id/note_layout"
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:background="@drawable/ic_view_update_spinner_background"
                        android:layout_marginStart="@dimen/view_update_item_margin_left_top"
                        android:layout_marginEnd="@dimen/view_update_item_margin_left_top"
                        android:layout_marginTop="7dp"
                        android:layout_marginBottom="7dp">

                        <EditText
                            android:id="@+id/edit_text"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:hint="@string/view_update_note_hint"
                            android:gravity="start"
                            android:layout_marginStart="24dp"
                            android:layout_marginEnd="24dp"
                            android:layout_marginTop="17dp"
                            android:layout_marginBottom="17dp"
                            android:textSize="15sp"
                            android:background="@drawable/ic_view_update_spinner_background"
                            android:windowSoftInputMode="adjustPan"
                            android:descendantFocusability="beforeDescendants"
                            />

                    </androidx.coordinatorlayout.widget.CoordinatorLayout>


                </LinearLayout>

            </ScrollView>

        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>




        <FrameLayout
            android:id="@+id/button_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/swipe_refresh_layout"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:background="@android:color/transparent"
            android:elevation="2dp"
            android:outlineProvider="bounds"
            android:layout_marginStart="-5dp"
            android:layout_marginEnd="-5dp">
            <TextView
                android:id="@+id/submit_button"
                android:layout_width="330dp"
                android:layout_height="55dp"
                android:text="@string/view_update_page_bottom_button"
                android:textStyle="bold"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:background="@drawable/ic_view_detail_button_background"
                android:onClick="@{submitClickListener}"
                android:layout_gravity="center"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"
                />

        </FrameLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>


